kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: front
---
apiVersion: v1
kind: Namespace
metadata:
  name: back
