kubernetes/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: back
---
apiVersion: v1
kind: Namespace
metadata:
  name: front
