kubernetes/serviceBack.yml
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: service-back
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: back-2048
