kubernetes/serviceFront.yml
apiVersion: v1
kind: Service
metadata:
  namespace: front
  name: service-front
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: front-2048
