kubernetes/back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: back
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: 737349677596.dkr.ecr.us-east-1.amazonaws.com/dev-ecr:back
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5100
          readinessProbe:
            httpGet:
              path: /materias
              port: 5100
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /materias
              port: 5100
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: back
  labels:
    app: back
spec:
  selector:
    app: back
  ports:
    - name: http
      port: 5100
      targetPort: 5100
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  namespace: back
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /materias
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/group.name: web
    alb.ingress.kubernetes.io/group.order: "10"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /materias
            pathType: Prefix
            backend:
              service:
                name: back-svc
                port:
                  number: 5100
